Adding router active underline style and create redux mission file

--- a/src/components/Nav.css
+++ b/src/components/Nav.css
@@ -29,10 +29,11 @@ body {
   padding-right: 10%;
 }
 
-a {
+/* for noneactiv router */
+.link {
   text-decoration: none;
 }
-
-a:active {
+/* for active one */
+.link-active {
   text-decoration: underline;
 }
