--- a/src/components/rockets.css
+++ b/src/components/rockets.css
@@ -4,3 +4,20 @@ body {
   padding: 0;
   margin: 0;
 }
+
+.list-of-rockets {
+  display: flex;
+  flex-direction: column;
+  list-style: none;
+}
+
+.each-rocket {
+  display: flex;
+  gap: 3rem;
+}
+
+.each-rocket img {
+  width: 200px;
+  height: 190px;
+  padding: 1rem;
+}
