--- a/src/components/mission.css
+++ b/src/components/mission.css
@@ -25,22 +25,36 @@ tr:nth-child(even) {
   background-color: #707070;
   color: #fff;
   border: none;
-  margin-left: 5px;
+  margin-left: 2px;
+  border-radius: 10px;
+}
+.memberac {
+  position: absolute;
+  background-color: blue;
+  color: #fff;
+  border: none;
+  margin-left: 2px;
   border-radius: 10px;
 }
 
 .button-container {
-  width: 120px;
+  width: 130px;
   padding: 2px;
 }
 
 .button-container1 {
-  width: 100px;
+  width: 120px;
   padding: 2px;
 }
 
 .join {
   padding: 8px;
-  margin-left: 5px;
+  margin-left: 7px;
   border: solid 1px;
+}
+.joinac {
+  padding: 8px;
+  margin-left: 7px;
+  border: solid red 1px;
+  color: red;
 }
