--- a/src/components/rockets.css
+++ b/src/components/rockets.css
@@ -1,8 +1,8 @@
 body {
   font-family: "poppins", sans-serif;
-  background: #f7f7f9;
   padding: 0;
   margin: 0;
+  background: #f7f7f9;
 }
 
 .list-of-rockets {
@@ -24,9 +24,28 @@ body {
 
 .rocket-btn {
   padding: 10px;
-  background-color: #00b4d8;
   color: white;
+  border: none;
   border-radius: 3px;
+  background-color: #017bff;
+  cursor: pointer;
+}
+
+.cancel-btn {
+  padding: 10px;
+  border-radius: 3px;
+  color: #6d757d;
+  font-weight: 600;
+  border: solid 2px #6d757d;
+  background-color: white;
+  cursor: pointer;
+}
+
+.reservation {
+  border-radius: 3px;
+  color: white;
+  padding: 8px;
+  background-color: #017bff;
   border: none;
   cursor: pointer;
 }
