--- a/src/components/mission.css
+++ b/src/components/mission.css
@@ -27,11 +27,12 @@ tr:nth-child(even) {
   border: none;
   margin-left: 2px;
   border-radius: 10px;
+  padding: 4px;
 }
 
 .memberac {
   position: absolute;
-  background-color: blue;
+  background-color: #017bff;
   color: #fff;
   border: none;
   margin-left: 2px;
