Adding test for the mission component

--- a/src/components/rockets.css
+++ b/src/components/rockets.css
@@ -44,9 +44,9 @@ body {
 .reservation {
   border-radius: 3px;
   color: white;
-  padding: 3px;
+  padding: 4px;
   margin-right: 4px;
-  background-color: #017bff;
+  background-color: #18a2b9;
   border: none;
   cursor: pointer;
   border-radius: 10px;
